--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -17,7 +17,7 @@
                     <option type="number" value=3>Fútbol 11</option>
                     <option type="number" value=4>Básquet </option>
                     <option type="number" value=5>Pádel </option>
-                 
+
                 </select>
             </div>
             <div class="text-white mb-2">
@@ -36,61 +36,62 @@
                 <label for="horario">Horario de Atencion <span style="color: red;"> * </span></label>
                 <select name="horaInicio" class="btn btn-ls btn-outline-primary" required>
                     <option>Desde</option>
-                    <option value="1" type="number">1</option>
-                    <option value="2" type="number">2</option>
-                    <option value="3" type="number">3</option>
-                    <option value="4" type="number">4</option>
-                    <option value="5" type="number">5</option>
-                    <option value="6" type="number">6</option>
-                    <option value="7" type="number">7</option>
-                    <option value="8" type="number">8</option>
-                    <option value="9" type="number">9</option>
-                    <option value="10" type="number">10</option>
-                    <option value="11" type="number">11</option>
-                    <option value="12" type="number">12</option>
-                    <option value="13" type="number">13</option>
-                    <option value="14" type="number">14</option>
-                    <option value="15" type="number">15</option>
-                    <option value="16" type="number">16</option>
-                    <option value="17" type="number">17</option>
-                    <option value="18" type="number">18</option>
-                    <option value="19" type="number">19</option>
-                    <option value="20" type="number">20</option>
-                    <option value="21" type="number">21</option>
-                    <option value="22" type="number">22</option>
-                    <option value="23" type="number">23</option>
-                    <option value="24" type="number">24</option>
+                    <option value="1" type="number">1:00</option>
+                    <option value="2" type="number">2:00</option>
+                    <option value="3" type="number">3:00</option>
+                    <option value="4" type="number">4:00</option>
+                    <option value="5" type="number">5:00</option>
+                    <option value="6" type="number">6:00</option>
+                    <option value="7" type="number">7:00</option>
+                    <option value="8" type="number">8:00</option>
+                    <option value="9" type="number">9:00</option>
+                    <option value="10" type="number">10:00</option>
+                    <option value="11" type="number">11:00</option>
+                    <option value="12" type="number">12:00</option>
+                    <option value="13" type="number">13:00</option>
+                    <option value="14" type="number">14:00</option>
+                    <option value="15" type="number">15:00</option>
+                    <option value="16" type="number">16:00</option>
+                    <option value="17" type="number">17:00</option>
+                    <option value="18" type="number">18:00</option>
+                    <option value="19" type="number">19:00</option>
+                    <option value="20" type="number">20:00</option>
+                    <option value="21" type="number">21:00</option>
+                    <option value="22" type="number">22:00</option>
+                    <option value="23" type="number">23:00</option>
+                    <option value="24" type="number">24:00</option>
                 </select>
                 <select name="horaFin" class="btn btn-ls btn-outline-primary" required>
                     <option>Hasta</option>
-                    <option value="1" type="number">1</option>
-                    <option value="2" type="number">2</option>
-                    <option value="3" type="number">3</option>
-                    <option value="4" type="number">4</option>
-                    <option value="5" type="number">5</option>
-                    <option value="6" type="number">6</option>
-                    <option value="7" type="number">7</option>
-                    <option value="8" type="number">8</option>
-                    <option value="9" type="number">9</option>
-                    <option value="10" type="number">10</option>
-                    <option value="11" type="number">11</option>
-                    <option value="12" type="number">12</option>
-                    <option value="13" type="number">13</option>
-                    <option value="14" type="number">14</option>
-                    <option value="15" type="number">15</option>
-                    <option value="16" type="number">16</option>
-                    <option value="17" type="number">17</option>
-                    <option value="18" type="number">18</option>
-                    <option value="19" type="number">19</option>
-                    <option value="20" type="number">20</option>
-                    <option value="21" type="number">21</option>
-                    <option value="22" type="number">22</option>
-                    <option value="23" type="number">23</option>
-                    <option value="24" type="number">24</option>
+                    <option value="1" type="number">1:00</option>
+                    <option value="2" type="number">2:00</option>
+                    <option value="3" type="number">3:00</option>
+                    <option value="4" type="number">4:00</option>
+                    <option value="5" type="number">5:00</option>
+                    <option value="6" type="number">6:00</option>
+                    <option value="7" type="number">7:00</option>
+                    <option value="8" type="number">8:00</option>
+                    <option value="9" type="number">9:00</option>
+                    <option value="10" type="number">10:00</option>
+                    <option value="11" type="number">11:00</option>
+                    <option value="12" type="number">12:00</option>
+                    <option value="13" type="number">13:00</option>
+                    <option value="14" type="number">14:00</option>
+                    <option value="15" type="number">15:00</option>
+                    <option value="16" type="number">16:00</option>
+                    <option value="17" type="number">17:00</option>
+                    <option value="18" type="number">18:00</option>
+                    <option value="19" type="number">19:00</option>
+                    <option value="20" type="number">20:00</option>
+                    <option value="21" type="number">21:00</option>
+                    <option value="22" type="number">22:00</option>
+                    <option value="23" type="number">23:00</option>
+                    <option value="24" type="number">24:00</option>
                 </select><span class="m-1"><b>Hs</b></span>
             </div>
             <div class="">
-                <label for="imagen"><span style="color: red;"> * </span><input type="file" name="imagen" id="imagen" required></label>
+                <label for="imagen"><span style="color: red;"> * </span><input type="file" name="imagen" id="imagen"
+                        required></label>
             </div>
             <div class="col-5 mx-auto">
                 <button type="submit" class="btn btn-success btn-block">
