--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -280,3 +280,10 @@ h6, h5{
 	right: 0;
 }
 
+#misCanchas {
+  background-image: url(../img/app/fut1.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed    
+}
