--- a/src/views/paginas/miPerfil.hbs
+++ b/src/views/paginas/miPerfil.hbs
@@ -1,36 +1,32 @@
-<div id="perfil">
+<div id="inicio">
     <form action="/paginas/miPerfil/{{user.idUsuarios}}" method="POST" enctype="multipart/form-data">
-        <div class="d-flex">
-            <div id="semiTransparente" class="col-5 m-auto py-3 px-3 ">
+        <div class="d-flex p-4">
+            <div id="semiTransparente" class="col-lg-6 m-auto p-4 px-3">
                 <div class="card">
-                    <div class="card-header">
-                        <a href="javascript: history.go(-1)" class="close">&times;</a>
-                        <h1 class=" mt-3 text-center py-2">Mi Perfil</h1>
-                        
-                    </div>
-                    
-                    {{#with usuario}}
-                    <div class="card-body">
-                        <div class="col-md-3">
-                            <img src="/img/descarga/{{img}}" width="170">
-                            <input type="file" name="imagen">
-                            <button class="btn btn-success" type="submit">Cargar</button>
-                        </div>
-                        
-                        <i for="nombre"><b>Nombre:</b>{{nombre}}</i>
-                        <br>
-                        <i for="nombreUsuario"><b>Apellido:</b>{{apellido}}</i>
-                        <br>
-                        <i for="nombreUsuario"><b>Nombre de Usuario:</b>{{nombreUsuario}}</i>
-                        <br>
-                        <i for="EmailUsuario"><b>Email:</b>{{email}}</i>
-                    </div>
-                    {{/with}}
+                    <h1 class="mt-2 text-center">Mi Perfil</h1>
                 </div>
+                {{#with usuario}}
+                <div class="row row-cols-2 text-white">
+                    <div class="col-md-4 m-0 mt-4 py-4">
+                        <img src="/img/descarga/{{img}}" width="170">
+                        <input type="file" name="imagen">
+                        <button class="btn btn-success" type="submit">Cargar</button>
+                    </div>
+                    <div class="col-md-8 m-0 mt-4 py-4 text-white">
+                        <i for="nombre"><b>Nombre: </b>{{nombre}}</i>
+                        <br>
+                        <i for="nombreUsuario"><b>Apellido: </b>{{apellido}}</i>
+                        <br>
+                        <i for="nombreUsuario"><b>Nombre de Usuario: </b>{{nombreUsuario}}</i>
+                        <br>
+                        <i for="EmailUsuario"><b>Email: </b>{{email}}</i>
+                    </div>
+                </div>
+                {{/with}}
             </div>
         </div>
+        <div class="col-2  p-4">
+            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+        </div>
     </form>
-    <div style = "float: left" class="col-2  p-4">
-        <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
-    </div>
 </div>
