--- a/src/views/paginas/misCanchas.hbs
+++ b/src/views/paginas/misCanchas.hbs
@@ -1,12 +1,12 @@
-<div id="cancha">
+<div id="misCanchas">
     <div class="container-fluid">
         <div class="card text-center mb-4">
             <h2 class="mb-3 mx-auto">MIS CANCHAS</h2>
         </div>
         <div id="scrollMisCanchas" class="row">
             {{#each establecimiento}}
-            <div class="col-4 mb-4">
-                <div class="card bg-info">
+            <div class="col-md-4 mb-4">
+                <div class="card bg-white">
                     <div class="card-header">
                         <b>Cancha Nº {{numeroCancha}} - {{deporte}}</b>
                     </div>
