--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -21,11 +21,11 @@
                         <li><a class="dropdown-item" href="/paginas/padel">Pádel</a></li>
                     </ul>
                 </li>
-                <!--
+                
                 <li class="nav-item">
                     <a type="link" id="accesoDuenio" class="nav-link" href="/paginas/duenio" aria-disabled="true" style="display: none;" aria-controls="offcanvasRight">Canchas</a>
                 </li>
-                -->
+                
                 <li class="nav-item">
                     <a type="link" class="nav-link" href="/paginas/reservaUsuario/{{user.idUsuarios}}" aria-disabled="true"
                  aria-controls="offcanvasRight">Mis Reservas</a>
@@ -39,7 +39,7 @@
             </ul>
         </div>
         <li class="navbar-nav nav-item">
-            <a type="button" class="btn btn-primary" href="#<!--/paginas/reservaDeporte-->">Reservá ya!</a>
+            <a type="button" class="btn btn-primary" href="/paginas/reservaDeporte">Reservá ya!</a>
         </li>
         
         <li class="navbar-nav nav-item">
