--- a/src/views/paginas/basquet.hbs
+++ b/src/views/paginas/basquet.hbs
@@ -1,5 +1,5 @@
 <div id="basquet">
-    <div class="container-fluid">
+    <div class="container-fluid pt-5">
         <div class="row justify-content-between">
             <div id="tablaEquipo" class="col-md-5 m-2 p-2">
                 <div class="d-flex">
