--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -1,5 +1,5 @@
 <div id="futbol">
-    <div class="container-fluid">
+    <div class="container-fluid pt-5">
         <div class="row justify-content-between">
             <div id="tablaEquipo" class="col-lg-5 m-2 p-2">
                 <div class="d-flex">
