--- a/src/views/paginas/reservaUsuario.hbs
+++ b/src/views/paginas/reservaUsuario.hbs
@@ -1,5 +1,5 @@
 <div id="inicio">
-    <div class="container">
+    <div class="container p-5">
         <div class="card text-center mb-4">
             <h2 class="mb-3 mx-auto">MIS RESERVAS</h2>
         </div>
