--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -9,7 +9,7 @@
     </div>
     <div class="container-fluid">
         <div class="row row-cols-2">
-            <div class="col-md-4 m-0 bg-white mt-4 py-4">
+            <div class="col-md-4 m-0 mt-4 py-4" style="background-color: rgb(255, 255, 255, 0.5);">
                 <div class="text-center">
                     <h3>Establecimientos</h3>
                     <form action="/paginas/reservaDeporte1/{{deporte}}" method="POST">
