--- a/src/views/reserva/reservaDeporte.hbs
+++ b/src/views/reserva/reservaDeporte.hbs
@@ -32,7 +32,7 @@
     </div>
     <div class="container-fluid">
         <div class="row row-cols-2">
-            <div class="col-md-4 m-0 bg-white mt-4 py-5">
+            <div class="col-md-4 m-0 mt-4 py-5" style="background-color: rgb(255, 255, 255, 0.5);">
                 <div class="text-center" disbled>
                     <h3>Elige un Deporte</h3>
                     <form action="/paginas/reservaDeporte1/" method="GET">
