trato de hacer dia

--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -1,6 +1,6 @@
 <script>
-    var fechaActual = new Date().toLocaleDateString();
-    document.getElementById('fecha').setAttribute("min", fechaActual);
+    {{!-- var fechaActual = new Date().toLocaleDateString();
+    document.getElementById('fecha').setAttribute("min", fechaActual); --}}
 </script>
 <div id="ticket">
     <div class="container p-5" >
