--- a/src/views/paginas/reservaUsuario.hbs
+++ b/src/views/paginas/reservaUsuario.hbs
@@ -1,30 +1,44 @@
-<div id="ticket" style="height: 50vw; width: 100vw">
-<div class="container">
-    <table class="table table-success table-striped ">
-        <h3 class="text-white text-center">Mis Reservas</h3>
-        <thead>
-            <th>Fecha</th>
-            <th>Establecimiento</th>
-            <th>Cancha</th>
-            <th>Deporte</th>
-            <th>Fecha Reservada</th>
-            <th>Hora</th>
-        </thead>
-        <tbody>
-            {{#each reservas}}
-            <tr>
-                 <td>{{fechas fecha}}</td>
-                <td>{{nombreEstablecimiento}}</td>
-                <td>{{numeroCancha}}</td>
-                <td>{{deporte}}</td>
-                <td>{{fechaReserva}}</td>
-                <td>{{ hora}}:00 Hs</td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+<div id="ticket">
+    <div class="container">
+        <table class="table table-success table-striped ">
+            <h3 class="text-white text-center">Mis Reservas</h3>
+            <thead>
+                <th>Fecha</th>
+                <th>Establecimiento</th>
+                <th>Cancha</th>
+                <th>Deporte</th>
+                <th>Fecha Reservada</th>
+                <th>Hora</th>
+            </thead>
+            <tbody>
+                {{#each reservas}}
+                <tr>
+                    <td>{{fechas fecha}}</td>
+                    <td>{{nombreEstablecimiento}}</td>
+                    <td>{{numeroCancha}}</td>
+                    <td>{{deporte}}</td>
+                    <td id="{{idReserva}}">{{fechaReserva}}</td>
+                    <td>{{ hora}}:00 Hs</td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+           <div class="row py-5">
+        <div style="float: left" class="col-2 p-5">
+            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+        </div>
+    </div>
+    </div>
+ 
 </div>
-<div style="float: left" class="col-2 p-5">
-    <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
-</div>
-</div>
+<script>
+    var dia= new Date().getDay();
+   
+     var fecha= new Date(document.getElementById('9').innerHTML).getUTCDay();
+    console.log(fecha);
+    console.log(dia);
+   
+    if(fecha === dia){
+        console.log("si son iguales")
+    }
+</script>
