trato de hacerhora

--- a/src/views/paginas/reservaUsuario.hbs
+++ b/src/views/paginas/reservaUsuario.hbs
@@ -41,4 +41,6 @@
     if(fecha === dia){
         console.log("si son iguales")
     }
+    var tiempo= new Date().getHours();
+    console.log(tiempo + 'es la hora')
 </script>
