--- a/src/views/reserva/reservaDeporte.hbs
+++ b/src/views/reserva/reservaDeporte.hbs
@@ -43,7 +43,7 @@
                         </select>
                         <button type="submit" class="btn btn-success">Aceptar</button>
                         <div class="col-1 mt-5 py-1">
-                            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-outline-danger">Volver</a>
+                            <a id="volver" href="/paginas/inicio" type="button" class="btn btn-outline-danger">Volver</a>
                         </div>
                     </form>
                 </div>
