--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -24,7 +24,7 @@
                         {{/each}}
                         <button class="btn btn-success" type="submit">Aceptar</button>
                         <div class="col-1 mt-5 py-1">
-                            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-outline-danger">Volver</a>
+                            <a id="volver" href="/paginas/reservaDeporte" type="button" class="btn btn-outline-danger">Volver</a>
                         </div>
                         <div class="col-1 py-1">
                             <a id="volver" href="/paginas/inicio" type="button" class="btn btn-outline-danger">Salir</a>
