funcionalidad basquet y padel, diseño pantallas equipos

--- a/src/views/paginas/crearEquipoBasquet.hbs
+++ b/src/views/paginas/crearEquipoBasquet.hbs
@@ -23,7 +23,7 @@
                             
                             <select name="idDeportes" class="btn btn-ls btn-outline-primary" required>
                                 <option type="" value="">FORMATO</option>
-                                <option type="number" value="Basquet">Básquet</option>
+                                <option type="number" value="4">Básquet</option>
                             </select>
                         </div>
                     </div>
