--- a/src/views/paginas/reservaUsuario.hbs
+++ b/src/views/paginas/reservaUsuario.hbs
@@ -4,8 +4,8 @@
             <h2 class="mb-3 mx-auto">MIS RESERVAS</h2>
         </div>
         <div id="scrollReservas">
-            <table class="table table-success table-striped">
-                <thead>
+            <table class="table table-success table-hover">
+                <thead class="table-info">
                     <th>Establecimiento</th>
                     <th>Cancha</th>
                     <th>Deporte</th>
