--- a/src/views/paginas/equipo.hbs
+++ b/src/views/paginas/equipo.hbs
@@ -1,24 +1,26 @@
-<div id="formularioF" class="container">
-    <div id="scroll" class="col-md-9 m-auto p-4">
-        <table class="table table-dark table-striped">
-            <thead class="table-danger">
-                <h2 id="semiTransparente" class="text-center py-2" style="color: rgb(0, 0, 0);">{{club}}</h2>
-                <th>Nombre</th>
-                <th>Apellido</th>
-                <th>Posicion</th>
-            </thead>
-            <tbody>
-                {{#each equipo}}
-                <tr>
-                    <td>{{nombre}}</td>
-                    <td>{{apellido}}</td>
-                    <td>{{posicion}}</td>
-                </tr>
-                {{/each}}
-            </tbody>
-        </table>
+<div id="inicio" class="container-fluid">
+    <div class="col-md-9 m-auto p-4">
+        <h2 class="card text-center py-2" style="color: rgb(0, 0, 0);">{{club}}</h2>
+        <div id="scrollMiEquipo">
+            <table class="table table-hover table-dark">
+                <thead class="table-info">
+                    <th>Nombre</th>
+                    <th>Apellido</th>
+                    <th>Posicion</th>
+                </thead>
+                <tbody>
+                    {{#each equipo}}
+                    <tr>
+                        <td>{{nombre}} <!--<i class="fas fa-copyright"></i>--></td>
+                        <td>{{apellido}}</td>
+                        <td>{{posicion}}</td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div>
     </div>
-    <div style = "float: left" class="col-2  p-4">
+    <div class="col-2  p-4">
         <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
     </div>
     
