--- a/src/views/paginas/miEquipo.hbs
+++ b/src/views/paginas/miEquipo.hbs
@@ -1,22 +1,24 @@
-<div id="formularioF" class="container">
-    <div id="scrollMiEquipo" class="col-md-9 m-auto p-4">
-        <table class="table table-dark">
-            <h3><p id="semiTransparente" class="text-center py-2" style="color: rgb(0, 0, 0);">{{equipo}}</p></h3>
-            <thead class="table-danger">
-                <th>Usuario</th>
-                <th>Jugador</th>
-                <th>Posicion</th>
-            </thead>
-            <tbody>            
-                {{#each equipos}}
-                <tr>
-                <td>{{nombreUsuario}}</td>
-                <td>{{nombre}}</td>
-                <td>{{posicion}}</td>
-                </tr>
-                {{/each}}
-            </tbody>
-        </table>
+<div id="inicio" class="container-fluid">
+    <div class="col-md-9 m-auto p-4">
+        <h3><p class=" card text-center py-2" style="color: rgb(0, 0, 0);">{{equipo}}</p></h3>
+        <div id="scrollMiEquipo">
+            <table class="table table-hover table-dark">
+                <thead class="table-info">
+                    <th>Usuario</th>
+                    <th>Jugador</th>
+                    <th>Posicion</th>
+                </thead>
+                <tbody>            
+                    {{#each equipos}}
+                    <tr>
+                    <td>{{nombreUsuario}}</td>
+                    <td>{{nombre}}</td>
+                    <td>{{posicion}}</td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div>
     </div>
     <div class="col-2  p-4">
         <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
