--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -1,7 +1,4 @@
-<script>
-    {{!-- var fechaActual = new Date().toLocaleDateString();
-    document.getElementById('fecha').setAttribute("min", fechaActual); --}}
-</script>
+
 <div id="ticket">
     <div class="container p-5" >
         <div class="row row-cols-2">
@@ -10,7 +7,7 @@
                     <h3>Establecimientos</h3>
                     <form action="/paginas/reservaDeporte1/{{deporte}}" method="POST">
                         <label class="mt-3" for="fecha"><b>Elija un dia</b></label>
-                        <input id="fecha" type="date" value="09/16/2021" name="fecha" required>
+                        <input id="fecha" type="date" name="fecha" required>
                         {{#each canchas}}
                         <div class="col-md-6 bg-info mb-3">
                             <b> {{nombreEstablecimiento}} <br>
