--- a/src/views/reserva/reservaDeporte.hbs
+++ b/src/views/reserva/reservaDeporte.hbs
@@ -1,4 +1,7 @@
 <div id="ticket">
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%"></div>
+    </div>
     <div class="container p-5">
         <div class="row row-cols-2">
             <div class="col-6 py-5" style="background-color: rgb(255, 255, 255, 0.4);">
@@ -17,62 +20,9 @@
             </div>
         </div>        
     </div>
-    <div class="row py-5">
-    <div style="float: left" class="col-2 p-5">
+    <div class="row m-1 py-5">
+    <div style="float: left" class="col-2 pt-5">
             <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
         </div>
         </div>
-</div>
-<!--
-<div id="ticket">
-    <div class="progress">
-        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%"></div>
-    </div>
-    <main>
-        <div class="container-fluid">
-            <div class="d-flex justify-content-around">
-                <div id="semiTransparente" class="p-5 text-white">
-                    <a href="javascript: history.go(-1)" class="close" style="color: rgb(255, 0, 51);">&times;</a>
-                    <h3>Elige un Deporte</h3>
-                    <form action="/paginas/reservaDeporte1/" method="GET">
-                    <select name="deporte" id="">
-                        {{#each deporte}}
-                        <option value="{{idDeportes}}">{{deporte}}</option>
-                        {{/each}}
-                    </select>
-                    <button type="submit" class="btn btn-success">Aceptar</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-
-    </main>
-
-</div>
--->
-
-<div id="ticket">
-    <div class="progress">
-        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%"></div>
-    </div>
-    <div class="container-fluid">
-        <div class="row row-cols-2">
-            <div class="col-md-4 m-0 bg-white mt-4 py-5">
-                <div class="text-center" disbled>
-                    <h3>Elige un Deporte</h3>
-                    <form action="/paginas/reservaDeporte1/" method="GET">
-                        <select name="deporte" id="">
-                            {{#each deporte}}
-                            <option value="{{idDeportes}}">{{deporte}}</option>
-                            {{/each}}
-                        </select>
-                        <button type="submit" class="btn btn-success">Aceptar</button>
-                        <div class="col-1 mt-5 py-1">
-                            <a id="volver" href="/paginas/inicio" type="button" class="btn btn-outline-danger">Volver</a>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
