--- a/src/views/reserva/reservaDeporte2.hbs
+++ b/src/views/reserva/reservaDeporte2.hbs
@@ -2,7 +2,7 @@
     <div class="container py-5">
         <div class="col-4 py-3" style="background-color: rgb(255, 255, 255, 0.4);">
             <div class="text-center">
-                <h3>Elige Turno</h3>
+                <h3>Elige Turno{{fechaReservada}} </h3>
                 <button class="btn btn-warning mb-3" id="botonTurnos"
                     onclick="return misTurnos({{turno.horaInicio}}, {{turno.horaFin}})">Ver Turnos</button>
                 <form action="/paginas/reservaDeporte2/{{idCancha}}&{{fecha}}" method="POST">
@@ -23,32 +23,31 @@
     </div>
 </div>
 <script type="text/javascript">
-let diaActual=  new Date()
-const convertirFecha= (fecha)=>{
-    convertirParaComparar= fecha.getFullYear() + "/"+ (fecha.getMonth()+1) + "/"+ fecha.getDate();
-    return convertirParaComparar
-}
-
-    function misTurnos(a, b) {
-         let horaActual= new Date().getHours();
-         let diaActual1=  new Date({{fecha}})        
-     
-        console.log(horaActual);
+let params = new URLSearchParams(window.location.href);
+let fechaPasada = params.get('fecha');
+let diaActual=  new Date();    
+function misTurnos(a, b) {        
+        const convertirFecha= (fecha)=>{
+            convertirParaComparar= fecha.getFullYear() + "-0"+ (fecha.getMonth()+1) + "-"+ fecha.getDate();
+            return convertirParaComparar
+        }
+         let horaActual= new Date().getHours();   
       
-        for (var i = a; i <= b; i++) {
+        for (let i = a; i <= b; i++) {              
+            
             {{#each reservas }}
           
             if (i == {{ hora }})
         { document.getElementById("texto").innerHTML += `<div class="col-4 mb-3 m-2 bg-danger"><input type="radio" name="turno" id="" value="${i}" disabled> ${i} Hs</div>`; continue
          }
-            {{/each}}
-              if (convertirFecha(diaActual) == convertirFecha(diaActual1)) {
-               if(horaActual >= i ) { continue
-               }
-            }
+            {{/each}}       
+                 if ((convertirFecha(diaActual) == fechaPasada) & ( horaActual >= i ))
+               {
+                continue;
+               }    
                 document.getElementById("texto").innerHTML += `<div class="col-4 mb-3 m-2 bg-primary"><input type="radio" name="turno" id="" value="${i}" required> ${i}:00 Hs.</div>`;
             }
-        }
+        }      
         var btnTurnos = document.getElementById("botonTurnos");
         var disableButton = function () { this.disabled = true; };
         btnTurnos.addEventListener('click', disableButton, false);
