--- a/src/views/reserva/reservaDeporte2.hbs
+++ b/src/views/reserva/reservaDeporte2.hbs
@@ -23,16 +23,18 @@
     </div>
 </div>
 <script type="text/javascript">
-let params = new URLSearchParams(window.location.href);
-let fechaPasada = params.get('fecha');
+let tomarParametro = new URLSearchParams(window.location.href);
+let fechaSeleccionada = tomarParametro.get('fecha');
 let diaActual=  new Date();    
 function misTurnos(a, b) {        
         const convertirFecha= (fecha)=>{
-            convertirParaComparar= fecha.getFullYear() + "-0"+ (fecha.getMonth()+1) + "-"+ fecha.getDate();
+            let mes= fecha.getMonth()+1;
+            if (mes < 10) {
+             mes='0' + mes}
+            convertirParaComparar= fecha.getFullYear() + "-"+ mes + "-"+ fecha.getDate();
             return convertirParaComparar
         }
-         let horaActual= new Date().getHours();   
-      
+         let horaActual= new Date().getHours();      
         for (let i = a; i <= b; i++) {              
             
             {{#each reservas }}
@@ -41,14 +43,14 @@ function misTurnos(a, b) {
         { document.getElementById("texto").innerHTML += `<div class="col-4 mb-3 m-2 bg-danger"><input type="radio" name="turno" id="" value="${i}" disabled> ${i} Hs</div>`; continue
          }
             {{/each}}       
-                 if ((convertirFecha(diaActual) == fechaPasada) & ( horaActual >= i ))
+                 if ((convertirFecha(diaActual) == fechaSeleccionada) & ( horaActual >= i ))
                {
                 continue;
                }    
                 document.getElementById("texto").innerHTML += `<div class="col-4 mb-3 m-2 bg-primary"><input type="radio" name="turno" id="" value="${i}" required> ${i}:00 Hs.</div>`;
             }
         }      
-        var btnTurnos = document.getElementById("botonTurnos");
-        var disableButton = function () { this.disabled = true; };
-        btnTurnos.addEventListener('click', disableButton, false);
+let btnTurnos = document.getElementById("botonTurnos");
+let disableButton = function () { this.disabled = true; };
+btnTurnos.addEventListener('click', disableButton, false);
 </script>
